# agent-lab

./: README.md  pyproject.toml  report.json
deep_research_agent/: __main__.py
deep_research_agent/api/: error_handlers.py  server.py
deep_research_agent/cli/: main.py
deep_research_agent/core/: agent.py  domain.py  events.py  prompts.py  report.py  session.py  session_store.py  settings.py  tools.py
deep_research_agent/demos/: demo_1_simple.py  demo_2_multi_step.py  demo_3_robust.py  demo_4_hitl.py  demo_5_long_research.py
notes/week1/: day01_llm_chat_completion.md  day02_function_calling.md  day03_react_pattern.md  day04_context_management.md  day05_real_tools.md  day06_error_handling_hitl.md  week1_retrospective.md
notes/week2/: day08_http_fastapi.md  day09_pydantic_deep.md  day10_sse_streaming.md  day11_session_management.md
shared/: agent_errors.py  audit_log.py  circuit_breaker.py  context_manager.py  dangerous_tools.py  fault_injector.py  llm_client.py  rate_limiter.py  real_tools.py  safety.py  token_counter.py  tools.py
week1_foundations/day01_llm_basics/: 01_hello_llm.py  02_roles_experiment.py  03_chatbot_cli.py  04_streaming.py
week1_foundations/day02_tool_use/: 01_first_tool_call.py  02_complete_loop.py  03_multi_tools.py  04_parallel_calls.py
week1_foundations/day03_react_loop/: 01_basic_react.py  02_visible_thought.py  03_production_react.py
week1_foundations/day04_context_management/: 01_tokenizer_lab.py  02_message_counter.py  03_context_manager_demo.py  05_stress_test.py  longevous_agent.py
week2_serving/day10_sse/: 01_sse_basics.py  (+1 more)
(+19 files in other folders)
