[project]
name = "agent-lab"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.137.1",
    "httpx>=0.28.1",
    "openai>=2.37.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.25",
    "tenacity>=9.1.4",
    "tiktoken>=0.13.0",
    "trafilatura>=2.0.0",
    "uvicorn[standard]>=0.49.0",
]
